[Styles] Fixes iPad layout issue in codeblocks.

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -560,13 +560,15 @@ article {
 
 article .article-container-single {
 
-  @media screen and (min-width: 600px) {
-    .entry-content > figure {
+  .entry-content > figure {
+    width: 100%;
+
+    @media screen and (min-width: 800px) {
       margin-left: -56%;
       width: 160%;
       margin-right: 0;
       float: none;
-      max-width:none;
+      max-width: none;
     }
   }
 
